2008-03-05  Philip Van Hoof <pvanhoof@gnome.org>

	* Check-for-duplicates in TnyFolderObserver and TnyFolderMonitor
	* Introduction of tny_gtk_header_list_model_set_no_duplicates

	* This was a minor API change

2008-03-04  Philip Van Hoof <pvanhoof@gnome.org>

	* Leave on disk, MIME parsing. Highly experimental

2008-03-04  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c:
	Now, when we get the parts of a mime part that's a message,
	we check if any part has an attachment content disposition,
	and update the attachments flag properly.
	* Moved bodystructure parser to camel, so that we
	can use it there.
	* libtinymail-camel/camel-lite/bs/bodystruct.c:
	Added missing if, to avoid fetching the header badly (and
	causing coredumps) for bodystructure strings not
	including BODYSTRUCTURE prefix.

2008-03-04  Philip Van Hoof <pvanhoof@gnome.org>

        * Attempt at making mime parsing use the seekable capability of
	streams in stead of copying them in memory. This is experimental!

2008-03-04  Philip Van Hoof <pvanhoof@gnome.org>

	* Introduction of TnySeekable
	* This is experimental

2008-03-03  Philip Van Hoof <pvanhoof@gnome.org>

	* Smaller bug fixes in the build
	* filename= encoding fixes

2008-03-03  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* debian/libtinymail-camel-1.0-0.install
	* debian/libtinymail-camel-1.0-0-dev.install:
	Removed obsolete libraries

2008-03-01  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixes in the POP code for POP servers that return invalid CAPA
	responses (like pop.sina.com)
	* Experimental reduction of libraries (camel-lite merged with
	camel-lite-providers)

2008-02-28  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_set_pass_func_default) reactivate the account
	always, even when we're setting the same pass func again.

2008-02-27  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c: